--- a/app/views/days/index.html.erb
+++ b/app/views/days/index.html.erb
@@ -1,10 +1,7 @@
 <h1>Here are all of your days:</h1>
 <% @days.each do |day| %>
   <li><%= link_to day.day_day_date, day_path(day) %></li>
-<!--  <% day.tasks.each do |task| %>
-    <li><%= task.task_content %></li>
-  <% end %>-->
-  <div id="day-<%= day.id %>">Affirmation: <%= day.day_affirmation %></div>
+  <div id="day-<%= day.id %>">Focus: <%= day.day_focus %></div>
   <button class="js-more" data-id="<%= day.id %>">More Info</button>
 <% end %>
 
@@ -13,22 +10,20 @@ $(function() {
   $(".js-more").on("click", function() {
     var id = $(this).data("id");
     $.get("/days/" + id + ".json", function(response) {
-    	var dayAffirmation = response["day_affirmation"];
         var dayFocus = response["day_focus"];
         var dayExercise = response["day_exercise"];
 
-        var hourLIs = response["hours"].map(function (hour) {
-          return "<li> Hour: " + hour["hour_number"] + "</li>"}).join('');
 
-        var taskLIs = response["tasks"].map(function (task) {
-          return "<li> Task: " + task["task_content"] + "</li>"
+        var hour = response["hours"].map(function (hour) {
+          return hour["hour_number"] + ": "});
 
+        var task = response["tasks"].map(function (task) {
+          return task["task_content"]});
 
-        }).join('');
-
-
-
-        var dayText = "<p> Affirmation: " + dayAffirmation + "</p><p> Focus: "+ dayFocus + "</p><p> Exercise: " + dayExercise + "</p><ul>" + hourLIs + "</ul>" + "<ul>" + taskLIs + "</ul>";
+        var hourwithtask = hour.map(function(e, i) {
+          return "<li>" + e + task[i] + "</li>"}).join('');
+        
+        var dayText = "<p> Focus: "+ dayFocus + "</p><p> Exercise: " + dayExercise + "</p><ul>" + hourwithtask + "</ul>" ;
 
         $("#day-" + id).html(dayText);
     });
