--- a/app/views/days/new.html.erb
+++ b/app/views/days/new.html.erb
@@ -15,4 +15,159 @@
   </div>
 <% end %>
 
-<%= render 'days/form' %>
+<%= form_for(@day) do |f| %>
+  <label>Day and date:</label><br>
+  <%= f.text_field :day_day_date %><br>
+
+  <%= f.hidden_field :user_id, :value => @user.id %>
+ 
+  <label>3 things you are grateful for</label><br>
+  1. <%= f.text_field :day_grateful_1 %><br>
+  2. <%= f.text_field :day_grateful_2 %><br>
+  3. <%= f.text_field :day_grateful_3 %><br>
+
+  <label>3 things you are excited for</label><br>
+  1. <%= f.text_field :day_excited_1 %><br>
+  2. <%= f.text_field :day_excited_2 %><br>
+  3. <%= f.text_field :day_excited_3 %><br>
+
+  <label>Affirmation: </label><br>
+  <%= f.text_field :day_affirmation %><br>
+
+  <label>Focus: </label><br>
+  <%= f.text_field :day_focus %><br>
+
+  <label>Exercise: </label><br>
+  <%= f.text_field :day_exercise %><br>
+
+  <label>Priorities: </label><br>
+  1. <%= f.text_field :day_priority_1 %><br>
+  2. <%= f.text_field :day_priority_2 %><br>
+  3. <%= f.text_field :day_priority_3 %><br>
+  4. <%= f.text_field :day_priority_4 %><br>
+  5. <%= f.text_field :day_priority_5 %><br><br>
+
+  <label>Hours and Task Content:</label><br>
+  <p>If you haven't already, please go generate some hours (in military time 24:00). </p>
+  <p>You must enter something in each line. If you have nothing for that hour, use "NA".</p>
+
+  <% Hour.all.each do |hour|%>
+    <%= f.fields_for :tasks do |task| %>
+      <%= hour.hour_number %>.
+      <%= task.text_field :task_content %> 
+      <%= task.hidden_field :day_id, :value => @day.id %>
+      <%= task.hidden_field :hour_id, :value => hour.id %><br>
+    <% end %><br>
+  <% end %>
+
+  <label>Tasks: </label><br>
+
+  1. <%= f.text_field :day_task_1 %><br>
+  2. <%= f.text_field :day_task_2 %><br>
+  3. <%= f.text_field :day_task_3 %><br>
+  4. <%= f.text_field :day_task_4 %><br>
+  5. <%= f.text_field :day_task_5 %><br>
+  6. <%= f.text_field :day_task_6 %><br>
+  7. <%= f.text_field :day_task_7 %><br>
+  8. <%= f.text_field :day_task_8 %><br>
+  9. <%= f.text_field :day_task_9 %><br>
+  10. <%= f.text_field :day_task_10 %><br>
+
+  <label>Notes: </label><br>
+  <%= f.text_field :day_notes %><br>
+
+  <label>Wins of the Day: </label><br>
+  1. <%= f.text_field :day_win_1 %><br>
+  2. <%= f.text_field :day_win_2 %><br>
+  3. <%= f.text_field :day_win_3 %><br>
+
+  <label>Improvement for Tomorrow: </label><br>
+  <%= f.text_field :day_improvement %><br>
+
+  <%= f.submit %>
+<% end %>
+
+<div id="dayResult">
+  <h2 id="dayDayDate"></h2>
+  <p id="dayGrateful1"></p>
+  <p id="dayGrateful2"></p>
+  <p id="dayGrateful3"></p>
+  <p id="dayExcited1"></p>
+  <p id="dayExcited2"></p>
+  <p id="dayExcited3"></p>
+  <p id="dayAffirmation"></p>
+  <p id="dayFocus"></p>
+  <p id="dayExercise"></p>
+  <p id="dayPriority1"></p>
+  <p id="dayPriority2"></p>
+  <p id="dayPriority3"></p>
+  <p id="dayPriority4"></p>
+  <p id="dayPriority5"></p>
+  <p id="dayTask1"></p>
+  <p id="dayTask2"></p>
+  <p id="dayTask3"></p>
+  <p id="dayTask4"></p>
+  <p id="dayTask5"></p>
+  <p id="dayTask6"></p>
+  <p id="dayTask7"></p>
+  <p id="dayTask8"></p>
+  <p id="dayTask9"></p>
+  <p id="dayTask10"></p>
+  <p id="dayNotes"></p>
+  <p id="dayWin1"></p>
+  <p id="dayWin2"></p>
+  <p id="dayWin3"></p>
+  <p id="dayImprovement"></p>
+
+</div>
+
+<script type="text/javascript" charset="utf-8">
+  $(function () {
+    $('form').submit(function(event) {
+      //prevent form from submitting the default way
+      event.preventDefault();
+//      alert("we r hack3rz");
+      var values = $(this).serialize();
+ 
+      //var posting = $.post('/posts', values);
+      var daying = $.day('/days', values);
+ 
+      daying.done(function(data) {
+        var day = data;
+        $("#dayDayDate").text(data["day_day_date"]);
+        $("#dayGrateful1").text(data["day_grateful_1"]);
+        $("#dayGrateful2").text(data["day_grateful_2"]);
+        $("#dayGrateful3").text(data["day_grateful_3"]);
+        $("#dayExcited1").text(data["day_excited_1"]);
+        $("#dayExcited2").text(data["day_excited_2"]);
+        $("#dayExcited3").text(data["day_excited_3"]);
+        $("#dayAffirmation").text(data["day_affirmation"]);
+        $("#dayFocus").text(data["day_focus"]);
+        $("#dayExercise").text(data["day_exercise"]);
+        $("#dayPriority1").text(data["day_priority_1"]);
+        $("#dayPriority2").text(data["day_priority_2"]);
+        $("#dayPriority3").text(data["day_priority_3"]);
+        $("#dayPriority4").text(data["day_priority_4"]);
+        $("#dayPriority5").text(data["day_priority_5"]);
+        $("#dayTask1").text(data["day_task_1"]);
+        $("#dayTask2").text(data["day_task_2"]);
+        $("#dayTask3").text(data["day_task_3"]);
+        $("#dayTask4").text(data["day_task_4"]);
+        $("#dayTask5").text(data["day_task_5"]);
+        $("#dayTask6").text(data["day_task_6"]);
+        $("#dayTask7").text(data["day_task_7"]);
+        $("#dayTask8").text(data["day_task_8"]);
+        $("#dayTask9").text(data["day_task_9"]);
+        $("#dayTask10").text(data["day_task_10"]);
+  //      $(".dayTaskHourHourNumber").text(task["hour"]["hour_number"]);
+  //      $(".dayTaskTaskContent").text(task["task_content"]);
+        $("#dayNotes").text(data["day_notes"]);
+        $("#dayWin1").text(data["day_win_1"]);
+        $("#dayWin2").text(data["day_win_2"]);
+        $("#dayWin3").text(data["day_win_3"]);
+        $("#dayImprovement").text(data["day_improvement"]);
+      });
+    });
+  });
+</script>
+
