--- a/app/views/days/new.html.erb
+++ b/app/views/days/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New Day Form</h1>
 
-<% if @day.errors.any? %>
+<!--<% if @day.errors.any? %>
   <div id="error_explanation">
     <h2>
       <%= pluralize(@day.errors.count, "error") %>
@@ -13,7 +13,7 @@
     <% end %>
     </ul>
   </div>
-<% end %>
+<% end %>-->
 
 <%= form_for(@day) do |f| %>
   <div class="field">
@@ -28,28 +28,28 @@
  
   <div class="field">
     <%= f.label :day_grateful_1 %><br>
-    1. <%= f.text_field :day_grateful_1 %><br>
+    <%= f.text_field :day_grateful_1 %><br>
   </div>
   <div class="field">
     <%= f.label :day_grateful_2 %><br>
-    2. <%= f.text_field :day_grateful_2 %><br>
+    <%= f.text_field :day_grateful_2 %><br>
   </div>
   <div class="field">
     <%= f.label :day_grateful_3 %><br>
-    3. <%= f.text_field :day_grateful_3 %><br>
+    <%= f.text_field :day_grateful_3 %><br>
   </div>
 
   <div class="field">
     <%= f.label :day_excited_1 %><br>
-    1. <%= f.text_field :day_excited_1 %><br>
+    <%= f.text_field :day_excited_1 %><br>
   </div>
   <div class="field">  
     <%= f.label :day_excited_2 %><br>
-    2. <%= f.text_field :day_excited_2 %><br>
+    <%= f.text_field :day_excited_2 %><br>
   </div>
   <div class="field">
     <%= f.label :day_excited_3 %><br>
-    3. <%= f.text_field :day_excited_3 %><br>
+    <%= f.text_field :day_excited_3 %><br>
   </div>
 
   <div class="field">
@@ -69,64 +69,64 @@
 
   <div class="field">
     <%= f.label :day_priority_1 %><br>
-    1. <%= f.text_field :day_priority_1 %><br>
+    <%= f.text_field :day_priority_1 %><br>
   </div>
   <div class="field">
     <%= f.label :day_priority_2 %><br>
-    2. <%= f.text_field :day_priority_2 %><br>
+    <%= f.text_field :day_priority_2 %><br>
   </div>
   <div class="field">
     <%= f.label :day_priority_3 %><br>
-    3. <%= f.text_field :day_priority_3 %><br>
+    <%= f.text_field :day_priority_3 %><br>
   </div>
   <div class="field">
     <%= f.label :day_priority_4 %><br>
-    4. <%= f.text_field :day_priority_4 %><br>
+    <%= f.text_field :day_priority_4 %><br>
   </div>
   <div class="field">
     <%= f.label :day_priority_5 %><br>
-    5. <%= f.text_field :day_priority_5 %><br>
+    <%= f.text_field :day_priority_5 %><br>
   </div>
 
   <div class="field">
     <%= f.label :day_task_1 %><br>
-    1. <%= f.text_field :day_task_1 %><br>
+    <%= f.text_field :day_task_1 %><br>
   </div>
   <div class="field">
     <%= f.label :day_task_2 %><br>
-    2. <%= f.text_field :day_task_2 %><br>
+    <%= f.text_field :day_task_2 %><br>
   </div>
   <div class="field">
     <%= f.label :day_task_3 %><br>
-    3. <%= f.text_field :day_task_3 %><br>
+    <%= f.text_field :day_task_3 %><br>
   </div>
   <div class="field">
     <%= f.label :day_task_4 %><br>
-    4. <%= f.text_field :day_task_4 %><br>
+    <%= f.text_field :day_task_4 %><br>
   </div>
   <div class="field">
     <%= f.label :day_task_5 %><br>
-    5. <%= f.text_field :day_task_5 %><br>
+    <%= f.text_field :day_task_5 %><br>
   </div>
   <div class="field">
     <%= f.label :day_task_6 %><br>
-    6. <%= f.text_field :day_task_6 %><br>
+    <%= f.text_field :day_task_6 %><br>
   </div>
   <div class="field">
     <%= f.label :day_task_7 %><br>
-    7. <%= f.text_field :day_task_7 %><br>
+    <%= f.text_field :day_task_7 %><br>
   </div>
   <div class="field">
     <%= f.label :day_task_8 %><br>
-    8. <%= f.text_field :day_task_8 %><br>
+    <%= f.text_field :day_task_8 %><br>
   </div>
   <div class="field">
     <%= f.label :day_task_9 %><br>
-    9. <%= f.text_field :day_task_9 %><br>
+    <%= f.text_field :day_task_9 %><br>
   </div>
   <div class="field">
     <%= f.label :day_task_10 %><br>
-    10. <%= f.text_field :day_task_10 %><br>
+    <%= f.text_field :day_task_10 %><br>
   </div>
 
   <div class="field">
@@ -136,15 +136,15 @@
 
   <div class="field">
     <%= f.label :day_win_1 %><br>
-    1. <%= f.text_field :day_win_1 %><br>
+    <%= f.text_field :day_win_1 %><br>
   </div>
   <div class="field">
     <%= f.label :day_win_2 %><br>
-    2. <%= f.text_field :day_win_2 %><br>
+    <%= f.text_field :day_win_2 %><br>
   </div>
   <div class="field">
     <%= f.label :day_win_3 %><br>
-    3. <%= f.text_field :day_win_3 %><br>
+    <%= f.text_field :day_win_3 %><br>
   </div>
 
   <div class="field">
@@ -157,7 +157,7 @@
   </div>
 <% end %>
 
-<div id="dayResult">
+<div class="dayResult">
   <h2 id="dayDayDate"></h2>
   <p id="dayGrateful1"></p>
   <p id="dayGrateful2"></p>
@@ -200,7 +200,7 @@
       var values = $(this).serialize();
  
       //var posting = $.post('/posts', values);
-      var dy = $.day('/days', values);
+      var dy = $.post('/days', values);
  
       dy.done(function(data) {
         var day = data;
@@ -218,7 +218,7 @@
         $("#dayPriority2").text(day["day_priority_2"]);
         $("#dayPriority3").text(day["day_priority_3"]);
         $("#dayPriority4").text(day["day_priority_4"]);
-        $("#dayPriority5").text(daya["day_priority_5"]);
+        $("#dayPriority5").text(day["day_priority_5"]);
         $("#dayTask1").text(day["day_task_1"]);
         $("#dayTask2").text(day["day_task_2"]);
         $("#dayTask3").text(day["day_task_3"]);
