--- a/app/views/days/new.html.erb
+++ b/app/views/days/new.html.erb
@@ -93,15 +93,18 @@
     <p>If you haven't already, please go generate some hours (in military time 24:00). </p>
     <p>You must enter something in each line. If you have nothing for that hour, use "NA".</p>
 
-    <% Hour.all.each do |hour|%>
+<!--    <% Hour.all.each do |hour|%>
       <%= f.fields_for :tasks do |task| %>
         <%= hour.hour_number %>.
         <%= task.text_field :task_content %> 
         <%= task.hidden_field :day_id, :value => @day.id %>
         <%= task.hidden_field :hour_id, :value => hour.id %><br>
       <% end %><br>
-    <% end %>
-  
+    <% end %>-->
+  <div class="field">  
+    <%= render partial: "hour", locals: { f: f } %>
+  </div>
+
   <div class="field">
     <%= f.label :day_task_1 %><br>
     <%= f.text_field :day_task_1 %><br>
@@ -187,6 +190,7 @@
   <p id="dayPriority3"></p>
   <p id="dayPriority4"></p>
   <p id="dayPriority5"></p>
+  <p id="dayTasks"></p>
   <p id="dayTask1"></p>
   <p id="dayTask2"></p>
   <p id="dayTask3"></p>
@@ -233,6 +237,7 @@
         $("#dayPriority3").text(day["day_priority_3"]);
         $("#dayPriority4").text(day["day_priority_4"]);
         $("#dayPriority5").text(day["day_priority_5"]);
+        $("#dayTasks").text(day["tasks"]);
         $("#dayTask1").text(day["day_task_1"]);
         $("#dayTask2").text(day["day_task_2"]);
         $("#dayTask3").text(day["day_task_3"]);
