move js index code to day js file

--- a/app/views/days/index.html.erb
+++ b/app/views/days/index.html.erb
@@ -5,30 +5,30 @@
   <button class="js-more" data-id="<%= day.id %>">More Info</button>
 <% end %>
 
-<script type="text/javascript" charset="utf-8">
-$(function() {
-  $(".js-more").on("click", function() {
-    var id = $(this).data("id");
-    $.get("/days/" + id + ".json", function(response) {
-        var dayFocus = response["day_focus"];
-        var dayExercise = response["day_exercise"];
+<!--//<script type="text/javascript" charset="utf-8">
+//$(function() {
+//  $(".js-more").on("click", function() {
+//    var id = $(this).data("id");
+//    $.get("/days/" + id + ".json", function(response) {
+//        var dayFocus = response["day_focus"];
+//        var dayExercise = response["day_exercise"];//
+//
 
+//        var hour = response["hours"].map(function (hour) {
+//          return hour["hour_number"] + ": "});//
 
-        var hour = response["hours"].map(function (hour) {
-          return hour["hour_number"] + ": "});
+//        var task = response["tasks"].map(function (task) {
+//          return task["task_content"]});//
 
-        var task = response["tasks"].map(function (task) {
-          return task["task_content"]});
+//        var hourwithtask = hour.map(function(e, i) {
+//          return "<li>" + e + task[i] + "</li>"}).join('');
+//        
+//        var dayText = "<p> Focus: "+ dayFocus + "</p><p> Exercise: " + dayExercise + "</p><ul>" + hourwithtask + "</ul>" ;//
 
-        var hourwithtask = hour.map(function(e, i) {
-          return "<li>" + e + task[i] + "</li>"}).join('');
-        
-        var dayText = "<p> Focus: "+ dayFocus + "</p><p> Exercise: " + dayExercise + "</p><ul>" + hourwithtask + "</ul>" ;
-
-        $("#day-" + id).html(dayText);
-    });
-  });
-});
-</script>
+//        $("#day-" + id).html(dayText);
+//    });
+//  });
+//});
+//</script>-->
 
 
