--- a/app/views/days/show.html.erb
+++ b/app/views/days/show.html.erb
@@ -80,9 +80,7 @@
 
 
 
-<!--<button class="js-next" data-id="<%= @day.id %>">Next Day</button>-->
-
-<script type="text/javascript" charset="utf-8">	
+<!--<script type="text/javascript" charset="utf-8">	
  $(function () {
    $(".js-next").on("click", function() {
    	 $(".test").hide();
@@ -132,7 +130,7 @@
      });
    });
  });
- </script>
+ </script> -->
 
 
 <br>
