move js new day code to day js file

--- a/app/views/days/new.html.erb
+++ b/app/views/days/new.html.erb
@@ -212,7 +212,7 @@
 
 </div>
 
-<script type="text/javascript" charset="utf-8">
+<!--<script type="text/javascript" charset="utf-8">
   $(function () {
     $('form').submit(function(event) {
       //prevent form from submitting the default way
@@ -268,4 +268,4 @@
       });
     });
   });
-</script>
+</script>-->
