--- a/app/views/days/index.html.erb
+++ b/app/views/days/index.html.erb
@@ -1,8 +1,8 @@
 <h1>Here are all of your days:</h1>
 <% @days.each do |day| %>
-  <li><strong><%= link_to day.day_day_date, day_path(day) %></strong></li>
-  <div id="day-<%= day.id %>">FOCUS: <%= day.day_focus %></div>
-  <button class="js-more" data-id="<%= day.id %>">Your schedule for the day</button>
+  <li><%= link_to day.day_day_date, day_path(day) %></li>
+  <div id="day-<%= day.id %>">Focus: <%= day.day_focus %></div>
+  <button class="js-more" data-id="<%= day.id %>">More Info</button>
 <% end %>
 
 <!--//<script type="text/javascript" charset="utf-8">
@@ -13,22 +13,17 @@
 //        var dayFocus = response["day_focus"];
 //        var dayExercise = response["day_exercise"];//
 //
-
 //        var hour = response["hours"].map(function (hour) {
 //          return hour["hour_number"] + ": "});//
-
 //        var task = response["tasks"].map(function (task) {
 //          return task["task_content"]});//
-
 //        var hourwithtask = hour.map(function(e, i) {
 //          return "<li>" + e + task[i] + "</li>"}).join('');
 //        
 //        var dayText = "<p> Focus: "+ dayFocus + "</p><p> Exercise: " + dayExercise + "</p><ul>" + hourwithtask + "</ul>" ;//
-
 //        $("#day-" + id).html(dayText);
 //    });
 //  });
 //});
 //</script>-->
-
 
