--- a/app/views/days/index.html.erb
+++ b/app/views/days/index.html.erb
@@ -25,22 +25,31 @@ $(document).on('turbolinks:load', function() {
 		  // names must be equal
 		  return 0;
 		});
-        console.log(response);
-        var format = response.map(function(day) {
+        console.log(response);// it works up to here
+        let format = response
+        //var format = response.map(function(day) {
         	//return "<br>" + day.day_day_date + "<br>" + " Focus: " + day.day_focus ;
-        	var dayDayDayDate = day["day_day_date"];
-        	var dayFocus = day["day_focus"];
-          	var dayExercise = day["day_exercise"];
+        	//var dayDayDayDate = day["day_day_date"];
+        	//var dayFocus = day["day_focus"];
+          	//var dayExercise = day["day_exercise"];
           	//var hour = day["hours"].map(function (hour) {
             //	return hour["hour_number"] + ": "});
           	//var task = day["tasks"].map(function (task) {
             //	return task["task_content"]});
           	//var hourwithtask = hour.map(function(e, i) {
             //	return "<li>" + e + task[i] + "</li>"}).join('');
-          	var dayText = "<p> Focus: "+ dayFocus + "</p><p> Exercise: " + dayExercise + "</p>"; //<ul>" + hourwithtask + "</ul>" ;
-          	return dayText;
-        });
-        $(".daysList").append(format);
+          	//var dayText = "<p> Focus: "+ dayFocus + "</p><p> Exercise: " + dayExercise + "</p>"; //<ul>" + hourwithtask + "</ul>" ;
+          	//return dayText;
+          	//function showList() {
+          	//	var dayDayDayDate = day["day_day_date"];
+          	//	var dayFocus = day["day_focus"];
+          	//	var dayExercise = day["day_exercise"];
+          	//	var dayText = "<p> Focus: "+ dayFocus + "</p><p> Exercise: " + dayExercise + "</p>";
+          	//	return dayText;
+          	//}
+        //});
+        $(".daysList").append(response);
+        console.log("everything should have worked");
         //$("#day-" + id).html(dayText);
     });
   });
